# gXTDB

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  project.clj  todo.md
.github/workflows/: clojure.yml  codecov.yaml  rust.yaml  rust_audit.yaml
gxtdb-rs/: Cargo.toml  build.rs
gxtdb-rs/docs/: gxtdb-rs.md
gxtdb-rs/examples/: datalog.rs  status.rs  submit_tx.rs
gxtdb-rs/src/: json_prost_helper.rs  lib.rs  status.rs
gxtdb-rs/src/transactions/: datalog.rs  mod.rs
gxtdb-rs/tests/: from.rs  lib.rs  mock.rs
kreya/grpc/: xtdb.krproj
kreya/grpc/com/example/addressbook/Greeter/: Hello-request.json
kreya/grpc/com/xtdb/: directory.krpref
kreya/grpc/com/xtdb/protos/GrpcApi/: EntityTx-request.json  EntityTx.krop  SpeculativeTx-request.json  SpeculativeTx.krop  SubmitTx-request.json  SubmitTx.krop  directory.krpref  status.krop
resources/: common.proto  dbbasis.proto  entity.proto  json.proto  logback.xml  service.proto  transactions.proto
src/com/example/addressbook/Greeter/: client.cljc  server.cljc
src/com/google/: protobuf.cljc
src/com/google/protobuf/GrpcApi/: client.cljc  server.cljc
src/com/xtdb/: protos.cljc
src/com/xtdb/protos/GrpcApi/: client.cljc  server.cljc
src/gxtdb/: controllers.clj  server.clj  service.clj  utils.clj
src/gxtdb/adapters/: db.clj  entity.clj  json.clj  status.clj  tx_log.clj  tx_time.clj
src/gxtdb/logic/: time.clj
test/gxtdb/: service_test.clj  utils_test.clj
test/gxtdb/adapters/: db_test.clj  entity_test.clj  json_test.clj  tx_log_test.clj  tx_time_test.clj
test/gxtdb/logic/: time_test.clj
