[package]
name = "gxtdb-rs"
version = "0.0.1"
edition = "2021"
license = "MIT"
description = "Rust client for XTDB database over gRPC"
keywords = ["XTDB", "gRPC", "Client"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["chrono"]
chrono = ["dep:chrono"]

[dependencies] 
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
prost-types = { version = "0.11" }
prost = "0.11"
uuid = "1.3.3"
tonic = "0.9.2"
chrono = "0.4"

chrono = { version = "0.4.26", features = ["serde"], optional = true }

[dev-dependencies]
futures = "0.3"
tower = "0.4"

rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
prost-types = { version = "0.11" }


[build-dependencies]
tonic-build = { version = "0.9.2", features = ["prost"] }


[[example]]
name = "status"
required-features = []