[package]
name = "gxtdb-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["chrono"]
chrono = ["dep:chrono"]

[dependencies] 
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }
prost = "0.11"
tonic = "0.9.2"

chrono = { version = "0.4.26", features = ["serde"], optional = true }

[dev-dependencies]
futures = "0.3"
tower = "0.4"

rand = "*"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
prost-types = { version = "0.11" }


[build-dependencies]
tonic-build = { version = "*", features = ["prost"] }


[[example]]
name = "status"
required-features = []